force-app/main/default/objects/Coupon__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>TODAY() &gt; Expired_In__c</formula>
    <label>Expired ?</label>
    <type>Checkbox</type>
</CustomField>