force-app/main/default/objects/Coupon__c/fields/Expired_In__c.field-meta.xml
<CustomField>
    <fullName>Expired_In__c</fullName>
    <label>Expired In</label>
    <required>true</required>
    <type>Date</type>
</CustomField>